# slack-logger-python

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  shell.nix
.github/workflows/: deploy.yml  format.yml  tagging.yml
logger/: __init__.py
slack_logger/: __init__.py
tests/: test_basic.py  test_filter.py  test_formatter.py  utils.py
